<resources>
    <!-- MakeStreamPutvideoInGoogleDriveAndPutLinkInFirebase -->
    <!-- Stream Video -->
    <string name="app_name">Like Uber &amp; Careem</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="title_activity_customer_map">Map</string>
    <string name="lat">lat</string>
    <string name="_0_00">_0_00</string>
    <string name="lon">lon</string>
    <string name="altitude">altitude</string>
    <string name="accuracy">accuracy</string>
    <string name="speed">speed</string>
    <string name="sensor">sensor</string>
    <string name="cell_tower_wifi">cell_tower_wifi</string>
    <string name="updates">updates</string>
    <string name="off">off</string>
    <string name="location_updates">location_updates</string>
    <string name="gps_savepower">gps_savepower</string>
    <string name="address">address</string>
    <string name="waypoints">waypoints</string>
    <string name="_0">_0</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="uberblack">UberBlack</string>
    <string name="uberx">UberX</string>
    <string name="call_uber">call Uber</string>
    <string name="uberxl">UberXl</string>
    <string name="todo2">TODO</string>
    <string name="logout">logout</string>
    <string name="history">history</string>
    <string name="settings">Settings</string>
    <string name="call_a_cab">Call a CAB</string>
    <string name="driver_car_name">Driver Car Name</string>
    <string name="driver_phone_number">Driver Phone Number</string>
    <string name="driver_name">Driver Name</string>
    <string name="settings1">Settings</string>
    <string name="logout1">Logout</string>
    <string name="todo1">TODO</string>
    <string name="driver_login">Driver Login</string>
    <string name="email1">Email...</string>
    <string name="password2">Password...</string>
    <string name="login1">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="create_an_account2">Create an Account</string>
    <string name="customer">Customer</string>
    <string name="driver">Driver</string>
    <string name="e_mail2">E-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="create_an_account12">Create An Account</string>
    <string name="password1">Password</string>
    <string name="password3">Password</string>
    <string name="create_an_account1">Create An Account</string>
    <string name="customer_login">Customer Login</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account1">Don\'t have an Account ?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="phone">Phone</string>
    <string name="confirm">confirm</string>
    <string name="back">back</string>
    <string name="name">Name</string>
    <string name="todo4">TODO</string>
    <string name="search">search</string>
    search
    <string name="google_map_key">AIzaSyAsJjYHi5rNphEU9gIDVtA55tIgNPURroI</string>
    <string name="write_any_place_name">write any place name...</string>
    <string name="tod6">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo3">TODO</string>
    <string name="car">car</string>
    <string name="your_name">your Name</string>
    <string name="your_phone_number">your Phone Number</string>
    <string name="your_car_name">your Car Name</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="change_picture">Change Picture</string>
    <string name="uberblack1">UberBlack</string>
    <string name="uberx1">UberX</string>
    <string name="uberxl1">UberXl</string>
    <string name="distance">distance</string>
    <string name="date">date</string>
    <string name="name1">name</string>
    <string name="from_to">From - To</string>
    <string name="phone1">phone1</string>
    <string name="pay_here">Pay Here</string>
    <string name="todo6">TODO</string>
    <string name="write_verification_code_here">Write verification code here...</string>
    <string name="write_phone_number_here">Write phone number here...</string>

    <string name="destination">destination</string>
    <string name="picked_customer">picked_customer</string>
    <string name="working">working</string>

    <string name="google_directions_key">AIzaSyAsJjYHi5rNphEU9gIDVtA55tIgNPURroI</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="paypal_email">paypal email</string>
    <string name="balance_0">Balance: 0€</string>
    <string name="payout">payout</string>
    <string name="todo">TODO</string>

</resources>