<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistorySingleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_to"
                android:layout_marginBottom="20sp"
                android:id="@+id/rideLocation"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:layout_marginBottom="20sp"
                android:id="@+id/rideDistance"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginBottom="20sp"
                android:id="@+id/rideDate"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/userImage"
                android:src="@mipmap/ic_default_user"
                android:contentDescription="@string/todo" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name1"
                    android:layout_marginBottom="20sp"
                    android:id="@+id/userName"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone1"
                    android:layout_marginBottom="20sp"
                    android:id="@+id/userPhone"/>
            </LinearLayout>
        </LinearLayout>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="1"
            android:visibility="gone"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pay"
            android:text="@string/pay_here"
            android:visibility="gone"
            android:enabled="false"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
