<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/car"
    tools:context=".Account.RegisterActivity2">

    <EditText
        android:id="@+id/edRegEmaildriver"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:hint="@string/e_mail"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edRegPass1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:hint="@string/password1"
        android:ems="10"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/butCreateAcc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/create_an_account1" />
</LinearLayout>