<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:id="@+id/layout"
    tools:context=".HistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:padding="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance_0"
            android:id="@+id/balance"
            android:visibility="gone"/>
        <EditText
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/payoutEmail"
            android:hint="@string/paypal_email"
            android:inputType="text"
            android:importantForAutofill="no" />
        <Button
            android:visibility="gone"
            android:text="@string/payout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/payout"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/historyRecyclerView"
            android:scrollbars="vertical">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>