<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close_button"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/close"
                    app:tint="@android:color/white"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/save_button"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:src="@drawable/edit"
                    app:tint="@android:color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/todo"
                    android:layout_marginEnd="15dp" />



</RelativeLayout>

</androidx.appcompat.widget.Toolbar>


</com.google.android.material.appbar.AppBarLayout>




<de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profil"
        app:civ_border_width="2dp"
        app:civ_border_color="#c880ff"
        android:layout_below="@+id/app_bar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />


    <TextView
        android:id="@+id/change_picture_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:text="@string/change_picture"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        />


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        android:layout_below="@+id/change_picture_btn"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:autofillHints="" />


    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_phone_number"
        android:inputType="number"
        android:layout_below="@+id/name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/driver_car_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_car_name"
        android:layout_below="@+id/phone_number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:importantForAutofill="no"
        android:inputType="text" />



</RelativeLayout>